--- a/client/view/Pre/Pre.css
+++ b/client/view/Pre/Pre.css
@@ -6,6 +6,7 @@
   color: var(--accent);
   background-color: var(--text-highlited);
   border-radius: 8px;
+  transition: background-color 0.3s;
 }
 
 .Pre code {
